--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -9,7 +9,7 @@
       </ion-nav-buttons>
     </ion-nav-bar>
 	  
-    <ion-nav-view name="menuContent"></ion-nav-view>
+    <ion-nav-view  name="menuContent"></ion-nav-view>
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
@@ -20,3 +20,5 @@
 	  <ion-nav-view name="sideMenuItem"></ion-nav-view>
   </ion-side-menu>
 </ion-side-menus>
+
+ <!--ng-class="$state.current.name == 'app.playlists' ? 'hide' : 'bar-calm'"-->
