--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -17,7 +17,7 @@
 	  <div class="list-wrapper">
 		  <div class="list">
 			  <a class="item item-icon-left item-icon-right" href="#">
-				<i class="icon"><img ng-src="./img/travel.png"/></i>
+				<i class="icon"><img ng-src="./img/travel-1.png"/></i>
 				L’île de Ré
 				<i class="icon ion-chevron-right"></i>
 			  </a>
