--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9822,7 +9822,7 @@ a.button {
   background-color: transparent; }
 
 .logo {
-  margin: 50px auto;
+  margin: 30px auto;
   display: block; }
 
 .search-box {
@@ -9846,7 +9846,7 @@ a.button {
     display: block; }
 
 .list-wrapper {
-  margin-top: 50px; }
+  margin-top: 40px; }
   .list-wrapper .item {
     background-color: transparent;
     font-weight: 600; }
@@ -9854,13 +9854,15 @@ a.button {
     font-size: 18px;
     line-height: 27px;
     color: #004c87; }
-  .list-wrapper .list > .item:last-child {
-    border-bottom: 0; }
+  .list-wrapper .list > .item {
+    background-color: transparent !important; }
+    .list-wrapper .list > .item:first-child {
+      border-top: 0; }
+    .list-wrapper .list > .item:last-child {
+      border-bottom: 0; }
 
 .list > .item {
   background-color: transparent !important; }
-  .list > .item:first-child {
-    border-top: 0; }
 
 .icon.icon18 {
   font-size: 18px;
@@ -9874,3 +9876,34 @@ a.button {
 
 .nav-bar-container.hide + .view-container .has-header {
   top: 0; }
+
+/*.sort-business
+{
+	.list-inset
+	{
+		margin-bottom: 0;
+	}
+}*/
+.alphabetics-list {
+  list-style: none;
+  font-size: 0;
+  margin: 0 2px 20px 2px; }
+  .alphabetics-list > li {
+    display: inline-block; }
+    .alphabetics-list > li + li {
+      margin-left: -1px; }
+    .alphabetics-list > li > a {
+      border: 1px solid;
+      cursor: pointer;
+      font-size: 11px;
+      font-weight: 700;
+      padding: 0 3px;
+      display: block;
+      text-transform: uppercase; }
+
+.title-sm {
+  margin: 0 2px 7px;
+  font-weight: 600; }
+
+.bg-white > .item {
+  background-color: #fff !important; }
