--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -45,6 +45,12 @@
 				 Actualités
 				<i class="icon ion-chevron-right"></i>
 			  </a>
+			  
+			  <a class="item item-icon-left item-icon-right" href="#/app/sort-business">
+				<i class="icon"><img ng-src="./img/directory.png"/></i>
+				 Annuaire
+				<i class="icon ion-chevron-right"></i>
+			  </a>
 		 </div>
 	  </div>
    
