--- a/www/templates/activity-menu.html
+++ b/www/templates/activity-menu.html
@@ -39,6 +39,6 @@
 		<ion-item href="#/app/night-world">Monde de la nuit</ion-item>
 		<ion-item href="#/app/association">Associations</ion-item>-->
 	  </ion-list>
-	 <button class="button button-calm button-custom" ng-click="myGoBack()"><i class="icon ion-ios-arrow-back"></i> Back</button>
+	<!-- <button class="button button-calm button-custom" ng-click="myGoBack()"><i class="icon ion-ios-arrow-back"></i> Back</button>-->
 	</ion-content>
 </ion-view>
