--- a/www/templates/water-acitivity-menu.html
+++ b/www/templates/water-acitivity-menu.html
@@ -52,6 +52,6 @@
 		  
 		 
 	  </ion-list>
-	  <button class="button button-calm button-custom"  ng-click="myGoBack()"><i class="icon ion-ios-arrow-back"></i> Back</button>
+	  <!--<button class="button button-calm button-custom"  ng-click="myGoBack()"><i class="icon ion-ios-arrow-back"></i> Back</button>-->
 	</ion-content>
 </ion-view>
