--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -16,7 +16,7 @@
 	
 	  <div class="list-wrapper">
 		  <div class="list">
-			  <a class="item item-icon-left item-icon-right" href="#">
+			  <a class="item item-icon-left item-icon-right" href="#/app/empty">
 				<i class="icon"><img ng-src="./img/travel-1.png"/></i>
 				L’île de Ré
 				<i class="icon ion-chevron-right"></i>
@@ -40,7 +40,7 @@
 				<i class="icon ion-chevron-right"></i>
 			  </a>
 			  
-			  <a class="item item-icon-left item-icon-right" href="#">
+			  <a class="item item-icon-left item-icon-right" href="#/app/empty">
 				<i class="icon"><img ng-src="./img/news.png"/></i>
 				 Actualités
 				<i class="icon ion-chevron-right"></i>
