--- a/www/templates/side-menu.html
+++ b/www/templates/side-menu.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Main Menu">
 	<ion-content>
 	  <ion-list>
-		<ion-item href="#" menu-close>
+		<ion-item href="#/app/empty" menu-close>
 		 	L’île de Ré
 		</ion-item>
 		<ion-item href="#/app/stay">
@@ -13,7 +13,7 @@
 		<ion-item href="#/app/activities">
 		  Activités
 		</ion-item>
-		<ion-item href="#" menu-close>
+		<ion-item href="#/app/empty" menu-close>
 		 	Actualités
 		</ion-item>
 		<ion-item href="#" menu-close>
