Loader icon added

--- a/www/templates/discovery-menu.html
+++ b/www/templates/discovery-menu.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Main Menu">
+<ion-view view-title="Découverte">
 	<ion-content>
 	  <ion-list>
 		  <a class="item item-icon-right" href="#/app/festival">
