--- a/www/templates/nature-menu.html
+++ b/www/templates/nature-menu.html
@@ -1,4 +1,4 @@
-<ion-view>
+<ion-view view-title="Patrimoine et nature">
 	<ion-content>
 	  <ion-list>
 		<ion-item menu-close ng-click="categorySearch($event)">
