--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -314,3 +314,10 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 {
 	color: #000;
 }
+
+// Loader
+.loader
+{
+	margin: 20px auto;
+	text-align: center;
+}
