--- a/www/templates/how-to-come.html
+++ b/www/templates/how-to-come.html
@@ -1,6 +1,6 @@
-<ion-view view-title="Main Menu">
+<ion-view view-title="Comment venir">
 	<ion-content>
-	  <ion-list>
+	  <!--<ion-list>
 		<ion-item menu-close href="#/">En Avion</ion-item>
 		<ion-item menu-close href="#/">En Train</ion-item>
 		<ion-item menu-close href="#/">En Voiture</ion-item>
@@ -10,6 +10,44 @@
 		<ion-item menu-close href="#/">En Bus</ion-item>
 		<ion-item menu-close href="#/">Transports à la Personne</ion-item>
 		<ion-item menu-close href="#/">A Pied ou à Vélo</ion-item>
-	  </ion-list>
+	  </ion-list>-->
+		
+		<ion-list>
+		  <a class="item" href="#/">
+			En Avion
+		  </a>
+		  
+		  <a class="item" href="#/">
+			 En Train
+		  </a>
+		  
+		  <a class="item" href="#/">
+			En Voiture
+		  </a>
+		  
+		  <a class="item" href="#/">
+			 A Moto
+		  </a>
+		  
+		  <a class="item" href="#/">
+			En Bateaux
+		  </a>
+			
+			<a class="item" href="#/">
+			 En Taxi
+		  </a>
+		  
+		  <a class="item" href="#/">
+			En Bus
+		  </a>
+		  
+		  <a class="item" href="#/">
+			Transports à la Personne
+		  </a>
+		  
+		  <a class="item" href="#/">
+			A Pied ou à Vélo
+		  </a>
+		</ion-list>
 	</ion-content>
 </ion-view>
