--- a/www/templates/stay-menu.html
+++ b/www/templates/stay-menu.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Main Menu">
+<ion-view view-title="Séjour">
 	<ion-content>
 	  <ion-list>
 		  <a class="item item-icon-right" href="#/app/accommodation">
