Get direction function

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -321,3 +321,8 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 	margin: 20px auto;
 	text-align: center;
 }
+.button-medium
+{
+	line-height: 24px;
+	min-height: 40px;
+}
