--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -9923,3 +9923,7 @@ a.button {
 .loader {
   margin: 20px auto;
   text-align: center; }
+
+.button-medium {
+  line-height: 24px;
+  min-height: 40px; }
