--- a/www/templates/accommodation-menu.html
+++ b/www/templates/accommodation-menu.html
@@ -19,7 +19,7 @@
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Campings
+		  Camping
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
