--- a/www/templates/accommodation-menu.html
+++ b/www/templates/accommodation-menu.html
@@ -2,7 +2,7 @@
 	<ion-content>
 	  <ion-list>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
+		<ion-item menu-close ng-click="categorySearch($event,1)">
 		 Tous les hébergements
 		</ion-item>
 		  
@@ -19,7 +19,7 @@
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Camping
+		  Campings
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
