--- a/www/templates/activity-menu.html
+++ b/www/templates/activity-menu.html
@@ -8,7 +8,7 @@
 		  </a>
 		  
 		  <a class="item item-icon-right" href="#/app/sports-recreation">
-			 Sports - Détente
+			 <!--Sports - Détente-->Activités sportives-détentes
 			<i class="icon icon18 ion-chevron-right"></i>
 		  </a>
 		  
@@ -31,13 +31,7 @@
 			Associations
 			<i class="icon icon18 ion-chevron-right"></i>
 		  </a>
-		  
-		<!--<ion-item href="#/app/water-activities">Activités nautiques</ion-item>
-		<ion-item href="#/app/sports-recreation">Sports - Détente</ion-item>
-		<ion-item href="#/app/trade">Commerce</ion-item>
-		<ion-item href="#/app/culture">Culture</ion-item>
-		<ion-item href="#/app/night-world">Monde de la nuit</ion-item>
-		<ion-item href="#/app/association">Associations</ion-item>-->
+		   
 	  </ion-list>
 	<!-- <button class="button button-calm button-custom" ng-click="myGoBack()"><i class="icon ion-ios-arrow-back"></i> Back</button>-->
 	</ion-content>
