--- a/www/templates/association-menu.html
+++ b/www/templates/association-menu.html
@@ -2,12 +2,12 @@
 	<ion-content>
 	  <ion-list>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		 Toutes les associations
+		<ion-item menu-close ng-click="categorySearch($event,1)">
+		  Toutes les associations
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Social
+			D’entraide
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
@@ -15,11 +15,11 @@
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Culturelles / Loisirs
+		   Culturelles et de loisirs
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Environnementales / Patrimoine
+		 Professionnelles
 		</ion-item>
 		 
 	  </ion-list>
