--- a/www/templates/deplacer-menu.html
+++ b/www/templates/deplacer-menu.html
@@ -11,7 +11,7 @@
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Autocars / Navettes 
+		   Autocars / Navettes Gratuites
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
