--- a/www/templates/eat-well-menu.html
+++ b/www/templates/eat-well-menu.html
@@ -2,7 +2,7 @@
 	<ion-content>
 	  <ion-list>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
+		<ion-item menu-close ng-click="categorySearch($event,1)">
 		 Tous les restaurants
 		</ion-item>
 		  
@@ -18,12 +18,16 @@
 		  Gastronomiques
 		</ion-item>
 		  
+		  <ion-item menu-close ng-click="categorySearch($event)">
+		 Brasseries
+		</ion-item>
+		  
 		<ion-item menu-close ng-click="categorySearch($event)">
 		  Restaurants
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Brasseries
+		  Restaurants fruit de mer
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
@@ -31,29 +35,25 @@
 		</ion-item>
 		
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Cuisine du Monde
+		 Bars Pubs Cafés
 		</ion-item>
-		  
+		 
+		<ion-item menu-close ng-click="categorySearch($event)">
+		 Bars à Vins
+		</ion-item> 
+		
 		<ion-item menu-close ng-click="categorySearch($event)">
 		 Pizzerias
 		</ion-item> 
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
+		  <ion-item menu-close ng-click="categorySearch($event)">
 		 A Emporter
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		Food Truck / Traiteurs
+		 Cuisine du Monde
 		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		 Bars à Vins / Caves à Vins
-		</ion-item> 
-		  
-		 <ion-item menu-close ng-click="categorySearch($event)">
-		 Chocolatiers / Glaciers
-		</ion-item> 
-		  
+		 
 	  </ion-list>
 	</ion-content>
 </ion-view>
