--- a/www/templates/informer-menu.html
+++ b/www/templates/informer-menu.html
@@ -11,11 +11,11 @@
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Ré’Apps Application
+		  Ré app application
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Ré’Apps Bornes
+		  Ré app borne
 		</ion-item>
 		 
 	  </ion-list>
