--- a/www/templates/nature-menu.html
+++ b/www/templates/nature-menu.html
@@ -8,7 +8,7 @@
 			Tous les lieux nature
 		</ion-item>
 		<ion-item menu-close ng-click="categorySearch($event)">
-			Promenade en mer
+			Promenades en ner
 		</ion-item>
 		<ion-item menu-close ng-click="categorySearch($event)">
 			Visite de l’estran
