--- a/www/templates/night-world-menu.html
+++ b/www/templates/night-world-menu.html
@@ -2,7 +2,7 @@
 	<ion-content>
 	  <ion-list>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
+		<ion-item menu-close ng-click="categorySearch($event,1)">
 		 Tout le monde de la nuit
 		</ion-item>
 		  
@@ -15,7 +15,7 @@
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Bars
+		  Bar
 		</ion-item>
 		
 		<ion-item menu-close ng-click="categorySearch($event)">
