--- a/www/templates/sports-recreation-menu.html
+++ b/www/templates/sports-recreation-menu.html
@@ -1,47 +1,55 @@
-<ion-view view-title="Sports - Détente">
+<ion-view view-title="Activités sportives-détentes">
 	<ion-content>
 	  <ion-list>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		 Toutes les activités
+		<ion-item menu-close ng-click="categorySearch($event,1)">
+			Toutes les activités de loisirs
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Coups de Coeur
+		   Coups de Coeur
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
 		  Bons Plans
 		</ion-item>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		 Tennis / Squash
+		  <ion-item menu-close ng-click="categorySearch($event)">
+		  Clubs enfants
 		</ion-item>
-		
-		<ion-item menu-close ng-click="categorySearch($event)">
+		  
+		  <ion-item menu-close ng-click="categorySearch($event)">
 		 Golf
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Ecuries / Poney Club
+		 Tennis / Squash
+		</ion-item>
+		  
+		  <ion-item menu-close ng-click="categorySearch($event)">
+		  Danse
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Natation
+		  Sports de combat
+		</ion-item>
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		  Massages
+		</ion-item>
+		  
+		  <ion-item menu-close ng-click="categorySearch($event)">
+		   SPA
+		</ion-item>
+		  
+		  <ion-item menu-close ng-click="categorySearch($event)">
+		Yoga
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
 		  Skate
 		</ion-item>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Danse
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Relaxation
-		</ion-item>
-		 
 	  </ion-list>
 	</ion-content>
 </ion-view>
