--- a/www/templates/trade-menu.html
+++ b/www/templates/trade-menu.html
@@ -2,8 +2,8 @@
 	<ion-content>
 	  <ion-list>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		 Tous les commerces
+		<ion-item menu-close ng-click="categorySearch($event,1)">
+		  Tous les commerces
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
@@ -15,43 +15,43 @@
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Alimentation Générale
+		  Alimentaires
 		</ion-item>
 		
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Boulangeries
+		  Terroirs
 		</ion-item>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		 Made in Ré
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Mode / Déco
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Tabac / Presse
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Services
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Coiffure / Bien-Etre
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Banques / Assurances
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
+		  <ion-item menu-close ng-click="categorySearch($event)">
 		  Artisans
 		</ion-item>
-		
+		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Auto - Moto / Bateau
+		  Souvenirs
+		</ion-item>
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		  Nautique
+		</ion-item>
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		   Shopping
+		</ion-item>
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		   Laveries
+		</ion-item>
+		  
+		  <ion-item menu-close ng-click="categorySearch($event)">
+		  Banques
+		</ion-item>
+		  
+		<ion-item menu-close ng-click="categorySearch($event)">
+		   Services ménages
+		</ion-item>
+		 
+		<ion-item menu-close ng-click="categorySearch($event)">
+		  Autres
 		</ion-item>
 		 
 	  </ion-list>
