--- a/www/templates/water-acitivity-menu.html
+++ b/www/templates/water-acitivity-menu.html
@@ -2,8 +2,8 @@
 	<ion-content>
 	  <ion-list>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		 Toutes les activités
+		<ion-item menu-close ng-click="categorySearch($event,1)">
+		 Toutes les activites
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
@@ -19,11 +19,11 @@
 		</ion-item>
 		
 		<ion-item menu-close ng-click="categorySearch($event)">
-		 Paddle 
+		 Paddle surf
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		  Planche à voile
+		   Planche à voile
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
@@ -34,16 +34,16 @@
 			Kite surf
 		</ion-item>
 		  
-		<ion-item menu-close ng-click="categorySearch($event)">
-		  Kayak
-		</ion-item>
-		  
-		<ion-item menu-close ng-click="categorySearch($event)">
+		  <ion-item menu-close ng-click="categorySearch($event)">
 		  Jet ski
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
-		   Bouées Tractées
+		  Kayak
+		</ion-item>
+		 
+		<ion-item menu-close ng-click="categorySearch($event)">
+		   Dériveur
 		</ion-item>
 		  
 		<ion-item menu-close ng-click="categorySearch($event)">
