Sort business view

--- a/www/templates/news-menu.html
+++ b/www/templates/news-menu.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Main menu">
+<ion-view view-title="Actualités">
 	<ion-content>		 
 		<ion-list> <p style="padding:10px;">Comming soon</p></ion-list>
 	</ion-content>
