--- a/www/templates/listing.html
+++ b/www/templates/listing.html
@@ -6,11 +6,11 @@
 			</div>
 			
 			<div ng-hide="listItems.error == 'Not found' || listItems.length <= 0 "> 
-				<ng-map zoom="10" center="[46.190101, -1.395228]">
-					<marker draggable="true" ng-repeat="list in listItems" position="{{list.latitude}},{{list.longitude}}" no-watcher="true"></marker>
+				<ng-map zoom="8" center="[46.190101, -1.395228]">
+					<marker draggable="false" ng-repeat="list in listItems" position="{{list.latitude}},{{list.longitude}}" no-watcher="true"></marker>
 				</ng-map>
 			</div>
-			 
+			
 			<ion-item ng-repeat="list in listItems" ng-class="{'hide' : listItems.error}">
 				<div class="business-list-wrapper">
 					<h2><a ng-click="viewBusiness($index)" class="business-name">{{list.nom}}</a></h2>
