--- a/www/templates/sort-business.html
+++ b/www/templates/sort-business.html
@@ -6,12 +6,9 @@
 			  <i class="icon ion-search placeholder-icon"></i>
 			  <input type="text" ng-model="searchItem" placeholder="Recherche entreprise">
 			</label>
-		  </div>
-		   
-		  <!--<div class="padding">
-			<button class="button button-block button-positive" type="submit">Submit</button>
-		  </div>-->
-		   
+		  </div>   
+		</form> <!--/Form -->
+		 <br>
 		  <h6 class="title-sm">Filter the business by</h6> 
 		  <ul class="alphabetics-list">
 			  <li><a ng-click="sortBusiness($event);">a</a></li>
@@ -48,40 +45,34 @@
 		   <div class="loader" ng-show="loaderIcon">
 			 <ion-spinner icon="android"></ion-spinner>
 		   </div>
-			   
-			<div ng-hide="listItems.error == 'Not found'">
-				<ng-map ng-repeat="list in listItems" ng-if="$index == 0" zoom="1" center="[{{list.latitude}},{{list.longitude}}]">
-				  <marker ng-repeat="list in listItems" 
-					position="{{list.latitude}},{{list.longitude}}" on-click="showData(map)">
-				  </marker>
+			 
+			<div ng-if="showMap" ng-hide="listItems.error == 'Not found' || listItems.length <= 0 "> 
+				<ng-map zoom="8" center="[46.190101, -1.395228]">
+					<marker draggable="false" ng-repeat="list in listItems" position="{{list.latitude}},{{list.longitude}}" no-watcher="true"></marker>
 				</ng-map>
 			</div>
-			 
+ 
 			<ion-item ng-repeat="list in listItems" ng-class="{'hide' : listItems.error}">
 				<div class="business-list-wrapper">
-					<h2><a ng-click="viewBusiness($index)" class="business-name">{{list.nom}}</a></h2>
+					<h2><a ng-click="viewSortBusiness($index)" class="business-name">{{list.nom}}</a></h2>
 					<p class="text-blue">{{list.ville}}</p>
-					
+
 					<div class="list-inner-content">
 						<p>{{list.adresse}}</p>
 						<p>{{list.cp}} {{list.ville}}</p>
 						<p ng-if="list.tel!=''" ng-class="{ 'hide' : !list.tel }">Tel : {{list.tel}} </p>
 						<p ng-if="list.fax!=''" ng-class="{ 'hide' : !list.fax }">Fax : {{list.fax}} </p>
 					</div>
+
+					<button ng-click="viewSortBusiness($index)" class="button button-outline button-positive button-medium">Obtenir l'itinéraire</button>
 				</div>
 			</ion-item>
-			
-			<ion-item ng-if="listItems.error == 'Not found'">
-				<p>No business Found</p>
+			 
+			<ion-item ng-if="listItems.error == 'Not found' || listItems.length <= 0">
+				<p>Aucun résultat</p>
 			</ion-item>
-			
+			 
 		</ion-list>
-		   
-		  <!--<label class="item item-input">
-			<i class="icon ion-search placeholder-icon"></i>
-			<input type="text" ng-model="searchItem" placeholder="Search">
-		  </label>-->
- 
-	  </form> <!--/Form -->
+		 
 	</ion-content>
 </ion-view>
